<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/lyt_linear"
    android:layout_margin="20dp"
    android:background="@color/black"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/adjust_brightness">
    </TextView>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:id="@+id/brightnessSeekBar"
        android:layout_height="wrap_content">
    </SeekBar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/adjust_blur">
    </TextView>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:id="@+id/blurSeekBar"
        android:layout_height="wrap_content">
    </SeekBar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/adjust_contrast">
    </TextView>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:id="@+id/contrastSeekBar"
        android:layout_height="wrap_content">
    </SeekBar>


    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnClose"
            android:contentDescription="@string/close_btn"
            android:src="@drawable/ic_close"
            app:tint="@color/white">
        </ImageView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnOk"
            android:contentDescription="@string/ok_btn"
            app:tint="@color/white"
            android:src="@drawable/ic_tick">

        </ImageView>

    </LinearLayout>


</LinearLayout>