<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#434141"
    tools:context=".EditImageActivity">


    <ImageView
        android:id="@+id/save_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/save_image"
        android:src="@drawable/save_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/restore_original_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/save_image"
        android:src="@drawable/image_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/share_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/share_icon"
        android:src="@drawable/share_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imagePreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="65dp"
        android:contentDescription="@string/preview_imageview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/settings_lyt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/bg_color"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/grayscale_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/greyscale_option_image"
            android:text="@string/greyscale"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:drawableTint="@color/white"
            app:drawableTopCompat="@drawable/greyscale" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/adjust_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/greyscale_option_image"
            android:text="@string/greyscale"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:drawableTint="@color/white"
            app:drawableTopCompat="@drawable/adjust_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/saturation_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/saturation_option_image"
            android:text="@string/enhance_saturation"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:drawableTint="@color/white"
            app:drawableTopCompat="@drawable/saturation_icon" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>